--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title></title>
+  <link rel="stylesheet" href="fonts/fonts.css">
   <script src="https://kit.fontawesome.com/9d1b4e88c5.js" crossorigin="anonymous"></script>
 </head>
 
